Update routes and references from /dash/ to /dashboard/ for consistency

--- a/apps/dashboard-spa-vue/public/after-logout.html
+++ b/apps/dashboard-spa-vue/public/after-logout.html
@@ -49,7 +49,7 @@
         <h1>You have been logged out</h1>
         <br>
         <br>
-        <a href="/dash/">
+        <a href="/dashboard/">
             <button>
                 open
                 dashboard
