--- a/apps/dashboard-spa-vue/index.html
+++ b/apps/dashboard-spa-vue/index.html
@@ -8,7 +8,7 @@
                   type="image/x-icon"
                   href="/favicon.ico" />
 
-            <base href="/dash/">
+            <base href="/dashboard/">
 
             <title>Dashboard</title>
 
