--- a/apps/auth-frontend-vue/index.html
+++ b/apps/auth-frontend-vue/index.html
@@ -37,7 +37,7 @@
       <body>
             <div id="app"></div>
             <script type="module"
-                    src="/src/main.ts"></script>
+                    src="./src/main.ts"></script>
       </body>
 
 </html>
