--- a/apps/dashboard-spa-vue/index.html
+++ b/apps/dashboard-spa-vue/index.html
@@ -6,7 +6,9 @@
 
             <link rel="icon"
                   type="image/x-icon"
-                  href="/favicon.ico" />
+                  href="/favicon.ico">
+            <link rel="shortcut icon"
+                  href="/favicon-16x16.png">
 
             <base href="/dashboard/">
 
