Add autoprint device store mapping and enhance pairing functionality

--- a/apps/orders-spa-vue/autoprint.html
+++ b/apps/orders-spa-vue/autoprint.html
@@ -12,7 +12,7 @@
 
     <body>
         <div id="app">
-            <button id="pair-device">Pair Device</button>
+            <button id="pair-device">Pair with a store</button>
             <div id="pairing-status"></div>
         </div>
         <script type="module"
