Add global window management functions and enhance app termination process

--- a/apps/orders-spa-vue/autoprint.html
+++ b/apps/orders-spa-vue/autoprint.html
@@ -8,11 +8,102 @@
             // const hostname = os.hostname();
             // console.log('Hostname:', hostname);
         </script>
+        <style>
+            .audio-class {
+                display: none;
+                position: absolute;
+                top: -1000px;
+                left: -1000px;
+            }
+
+            body {
+                padding: 0px;
+                margin: 0px;
+                font-size: 20px;
+            }
+
+            button,
+            select,
+            input {
+                padding: 10px;
+                margin: 10px;
+                font-size: 20px;
+            }
+
+            button:hover:enabled {
+                background-color: #ccc;
+                color: black;
+            }
+
+            button:active:enabled {
+                background-color: #000;
+                color: white;
+            }
+
+            #print-btns-container {
+                /* position: fixed;
+                    bottom: 0px;
+                    right: 0px;
+                    left: 0px; */
+                background-color: lightgray;
+                margin-bottom: 20px;
+            }
+
+            .green-btn {
+                background-color: green;
+                color: white;
+            }
+
+            .red-btn {
+                background-color: red;
+                color: white;
+            }
+
+            #print-btns-container button {
+                font-weight: bold;
+                width: 90%;
+                padding: 10px;
+                margin: 0px;
+                margin-top: 10px;
+                margin-right: 5%;
+                margin-left: 5%;
+                border-radius: 10px;
+                /* box-shadow: 0px 0px 10px black; */
+            }
+
+            #print-btns-container button.button-small {
+                background-color: green;
+                color: white;
+                width: 20%;
+                margin: 0px;
+                margin-left: 2.4%;
+                margin-top: 5%;
+            }
+
+            #print-btns-container button:hover:enabled {
+                background-color: #ccc;
+                color: black;
+            }
+
+            #print-btns-container button:active:enabled {
+                background-color: #000;
+                color: white;
+            }
+
+            #stop-pairing {
+                background-color: red;
+                color: white;
+                display: none;
+            }
+
+        </style>
     </head>
 
     <body>
         <div id="app">
-            <button id="pair-device">Pair with a store</button>
+            <button id="kill-app">QUIT (KILL AUTO PRINT APP)</button>
+            <button id="pair-device">Pair your device</button>
+            <button id="stop-pairing">Stop pairing</button>
             <div id="pairing-status"></div>
         </div>
         <script type="module"
