--- a/apps/orders-spa-vue/public/always_top_on.html
+++ b/apps/orders-spa-vue/public/always_top_on.html
@@ -95,6 +95,8 @@
 
     <body onclick="javascript:onPrinterButtonClick();">
         <img src="tray.png">
+        <span class=""
+              id="is-online-status"></span>
         <span class="animated infinite tada"
               id="pendingOrderCount"></span>
     </body>
