--- a/apps/orders-spa-vue/public/always_top_on.html
+++ b/apps/orders-spa-vue/public/always_top_on.html
@@ -72,6 +72,10 @@
         </style>
         <script>
             function onPrinterButtonClick() {
+                if (typeof global === "undefined") {
+                    alert('focus global window');
+                    return;
+                }
                 if (global.mainWindow) {
                     global.mainWindow.show();
                     global.mainWindow.focus();
