Refactor autoprint-nwjs: update build script for main URL validation, remove obsolete package.json, and add restart functionality

--- a/apps/orders-spa-vue/autoprint.html
+++ b/apps/orders-spa-vue/autoprint.html
@@ -121,6 +121,7 @@
                 <label for="is-online-checkbox">Keep Online</label>
             </div>
             <button id="kill-app">QUIT (KILL AUTO PRINT APP)</button>
+            <button id="restart-app">RESTART</button>
         </div>
         <script type="module"
                 src="./src/autoprint/autoprint-main.ts"></script>
