Add DarkMode and AlwaysTopOn components, update Vite config, and refactor autoprint logic

--- a/apps/orders-spa-vue/autoprint.html
+++ b/apps/orders-spa-vue/autoprint.html
@@ -2,110 +2,12 @@
 <html lang="en">
 
     <head>
-        <style id="autoprint-style">
-            .audio-class {
-                display: none;
-                position: absolute;
-                top: -1000px;
-                left: -1000px;
-            }
-
-            body {
-                padding: 0px;
-                margin: 0px;
-                font-size: 20px;
-            }
-
-            button,
-            select,
-            input {
-                padding: 10px;
-                margin: 10px;
-                font-size: 20px;
-            }
-
-            button:hover:enabled {
-                background-color: #ccc;
-                color: black;
-            }
-
-            button:active:enabled {
-                background-color: #000;
-                color: white;
-            }
-
-            #print-btns-container {
-                /* position: fixed;
-                    bottom: 0px;
-                    right: 0px;
-                    left: 0px; */
-                background-color: lightgray;
-                margin-bottom: 20px;
-            }
-
-            .green-btn {
-                background-color: green;
-                color: white;
-            }
-
-            .red-btn {
-                background-color: red;
-                color: white;
-            }
-
-            #print-btns-container button {
-                font-weight: bold;
-                width: 90%;
-                padding: 10px;
-                margin: 0px;
-                margin-top: 10px;
-                margin-right: 5%;
-                margin-left: 5%;
-                border-radius: 10px;
-                /* box-shadow: 0px 0px 10px black; */
-            }
-
-            #print-btns-container button.button-small {
-                background-color: green;
-                color: white;
-                width: 20%;
-                margin: 0px;
-                margin-left: 2.4%;
-                margin-top: 5%;
-            }
-
-            #print-btns-container button:hover:enabled {
-                background-color: #ccc;
-                color: black;
-            }
-
-            #print-btns-container button:active:enabled {
-                background-color: #000;
-                color: white;
-            }
-
-            #stop-pairing {
-                background-color: red;
-                color: white;
-                display: none;
-            }
-
-            #is-online-checkbox {
-                transform: scale(1.5);
-                margin-right: 10px;
-                cursor: pointer;
-            }
-
-            label[for="is-online-checkbox"] {
-                font-size: 1.2em;
-                cursor: pointer;
-            }
-
-        </style>
     </head>
 
     <body>
-        <div id="app">
+        <div id="app"></div>
+        <div id="app-2"
+             style="display: none;">
             <h1>Auto Print</h1>
             <div>
                 <div>
