Adjust iframe dimensions and padding for improved layout and prevent duplicate iframe creation

--- a/apps/orders-spa-vue/public/autoprint-alwaysTopOn.html
+++ b/apps/orders-spa-vue/public/autoprint-alwaysTopOn.html
@@ -5,10 +5,11 @@
         <style>
             body {
                 margin: 0px;
-                padding: 2px;
+                padding: 4px;
                 overflow: hidden;
                 cursor: pointer;
                 background-color: #fff;
+                text-align: center;
             }
 
         </style>
